# cnmaps-data

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
cnmaps_data/: __init__.py  checker.py  manifest.json  provider.py
cnmaps_data/data/datasets/administrative/cn-neighbors/land/: AFG.geojson  BTN.geojson  IND.geojson  KAZ.geojson  KGZ.geojson  LAO.geojson  MMR.geojson  MNG.geojson  NPL.geojson  PAK.geojson  PRK.geojson  RUS.geojson  TJK.geojson  VNM.geojson
cnmaps_data/data/datasets/administrative/world-countries/land/: ABW.geojson  AGO.geojson  AIA.geojson  ALA.geojson  ALB.geojson  AND.geojson  ANT.geojson  ARE.geojson  ARG.geojson  ARM.geojson  ASM.geojson  ATA.geojson  ATF.geojson  ATG.geojson  AUS.geojson  AUT.geojson  AZE.geojson  BDI.geojson  BEL.geojson  BEN.geojson  BES.geojson  BFA.geojson  BGD.geojson  BGR.geojson  BHR.geojson  BHS.geojson  BIH.geojson  BLM.geojson  BLR.geojson  BLZ.geojson  BMU.geojson  BOL.geojson  BRA.geojson  BRB.geojson  BRN.geojson  BVT.geojson  BWA.geojson  CAF.geojson  CAN.geojson  CCK.geojson  (+204 more)
cnmaps_data/data/index/: administrative.db
cnmaps_data/data/reference/: country-name-map.json
docs/: country-name-map.md  dataset-index-china.md  dataset-index-international.md  dataset-index.md  developer-guide.md
scripts/: generate_cn_neighbors.py  generate_dataset_index_docs.py  generate_world_countries.py  update_country_names.py
